--- a/demo/src/main/resources/templates/index.html
+++ b/demo/src/main/resources/templates/index.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/dt-1.10.22/datatables.min.css"/>
     <title>USER DEMO</title>
   </head>
   <body>
@@ -36,7 +37,7 @@
     <form method="post" th:object="${users}" >
     	<div class="container">
     		<h1>Usuarios</h1>
-			  <table class="table">
+			  <table class="table" id="myTable">
 				  <thead>
 				    <tr>
 				      <th scope="col">Nombre</th>
@@ -67,6 +68,8 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
+	<script type="text/javascript" src="https://cdn.datatables.net/v/dt/dt-1.10.22/datatables.min.js"></script>
+
 	<script th:inline="javascript">
     function sendDelete(url) {
         var xhttp = new XMLHttpRequest();
@@ -77,6 +80,13 @@
 	        };
 	        xhttp.send();
     	}
+    
+    $(document).ready( function () {
+        $('#myTable').DataTable({
+        	 searching:false,
+        	 scrollY: 200
+        });
+    } );
     </script>
   
   </body>
